--- a/homework_1/requirements.txt
+++ b/homework_1/requirements.txt
@@ -1,3 +1,22 @@
 numpy==1.23.0
 opencv-python==4.8.0.76
-matplotlib @ file:///C:/ci/matplotlib-suite_1613408055530/work
+pytorch-ignite==0.4.13
+pytorch-lightning==2.2.0.post0
+torch @ file:///tmp/torch/torch-2.1.2-cp310-cp310-linux_x86_64.whl#sha256=ae3259980b8d6551608b32fde2695baca64c72ed15ab2332023a248c113815a8
+torchaudio @ file:///tmp/torch/torchaudio-2.1.2-cp310-cp310-linux_x86_64.whl#sha256=10966b20361b49bc41b6c6ba842d3ea842320fb8c589823b4120f24a98013b4a
+torchdata==0.7.1
+torchinfo==1.8.0
+torchmetrics==1.3.1
+torchtext @ file:///tmp/torch/torchtext-0.16.2-cp310-cp310-linux_x86_64.whl#sha256=a2a382655a08e1f6eeab6a307d0c8d78139cfa04cc329a7dc15a3f7c1e6e7a19
+torchvision @ file:///tmp/torch/torchvision-0.16.2-cp310-cp310-linux_x86_64.whl#sha256=105901a20924f652ee62df0bb57580c67725eb21f11a349658952c4be2050d94
+umap-learn==0.5.5
+seaborn==0.12.2
+pandas==2.1.4
+pandas-datareader==0.10.0
+pandas-profiling==3.6.6
+pandas-summary==0.2.0
+pandasql==0.7.3
+matplotlib==3.7.5
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
+matplotlib-venn==0.11.10
+Pillow==9.5.0
